--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -24,34 +24,14 @@
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
         "KSlN3yHqYklG",
-        "y-Ehk30pYrdP",
-        "qYpmQ266Yuh3",
         "Seke61FWphqN",
-        "b0JNsNcRphqO",
         "rFu4xreNphqO",
-        "g-ATYxFrGrvw",
-        "Yfr_Vlr8HBkt",
-        "8yEUt7NnHlrM",
-        "tEA2Xm5dHt1r",
-        "I79__PHVH19G",
-        "Ou-I18pAyIpj",
-        "fF3858GYyt-u",
-        "4_0_7-oCpUZd",
-        "hwyV_J3ipUZe",
-        "3yB-zSqbpUZe",
-        "dEUvejAfpUZe",
-        "Fd15vwWVpUZf",
-        "bn_IUdTipZyH",
-        "49K5P_iCpZyH",
-        "Nff-vKELpZyI",
-        "kLW572S8pZyI",
-        "dWbDXHzopZyI",
+        "yLjJCtPM0KBk",
+        "xiyOF9F70UgQ",
+        "-oLEiFgy-5Pf",
         "id1riN9m0vUs",
-        "VfCC591jGiD4",
-        "OB4l2ZhMeS1U",
-        "ArJBuiUVfxKd",
-        "4qY1EAkEfxKe",
-        "PiV4Ypx8fxKe",
+        "89xtkJwZ18nB",
+        "BhH2vgX9EjGr",
         "TfvqoZmBfxKf",
         "dJ2tPlVmpsJ0",
         "JWYfwnehpsJ1",
@@ -323,14 +303,53 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "%matplotlib inline\n",
+        "\n",
         "import lightgbm\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
+        "\n",
         "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
-        "from sklearn.preprocessing import OneHotEncoder"
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV,  cross_val_score"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importing all models from sklearn to be used in our model building\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.svm import LinearSVC\n",
+        "import time\n",
+        "from sklearn.naive_bayes import MultinomialNB"
+      ],
+      "metadata": {
+        "id": "vi93QDgOHyqk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importing  metrics for evaluation for our models\n",
+        "from sklearn import metrics\n",
+        "from sklearn.metrics import classification_report,confusion_matrix\n",
+        "from sklearn.metrics import accuracy_score,precision_score\n",
+        "from sklearn.metrics import recall_score,f1_score,roc_curve, roc_auc_score"
+      ],
+      "metadata": {
+        "id": "twqn_IYnIRiP"
       },
       "execution_count": null,
       "outputs": []
@@ -1304,7 +1323,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From the above insight "
+        "Solo Leisure traveling type gives best rating in value for money section compare to other type of traveling. this is a positive sign of business. "
       ],
       "metadata": {
         "id": "zfJ8IqMcYoAp"
@@ -1398,7 +1417,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "In Economy Class the average ratings of Food_bev and entertainment given by passenger is lowest thats why we need to improve airplain's Food_bev and entertainment in Economy section."
       ],
       "metadata": {
         "id": "jLNxxz7MYrdP"
@@ -1492,9 +1511,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
+      "source": [],
       "metadata": {
         "id": "_WtzZ_hCYuh4"
       }
@@ -1620,6 +1637,17 @@
       ],
       "metadata": {
         "id": "s52ywVPLbKFz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.countplot(data=airline_df,x='airline',hue='recommended')"
+      ],
+      "metadata": {
+        "id": "jfLgvKXnAEcr"
       },
       "execution_count": null,
       "outputs": []
@@ -2086,282 +2114,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## ***5. Hypothesis Testing***"
-      ],
-      "metadata": {
-        "id": "g-ATYxFrGrvw"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Based on your chart experiments, define three hypothetical statements from the dataset. In the next three questions, perform hypothesis testing to obtain final conclusion about the statements through your code and statistical testing."
-      ],
-      "metadata": {
-        "id": "Yfr_Vlr8HBkt"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "-7MS06SUHkB-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Hypothetical Statement - 1"
-      ],
-      "metadata": {
-        "id": "8yEUt7NnHlrM"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. State Your research hypothesis as a null hypothesis and alternate hypothesis."
-      ],
-      "metadata": {
-        "id": "tEA2Xm5dHt1r"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "HI9ZP0laH0D-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 2. Perform an appropriate statistical test."
-      ],
-      "metadata": {
-        "id": "I79__PHVH19G"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Perform Statistical Test to obtain P-Value"
-      ],
-      "metadata": {
-        "id": "oZrfquKtyian"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which statistical test have you done to obtain P-Value?"
-      ],
-      "metadata": {
-        "id": "Ou-I18pAyIpj"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "s2U0kk00ygSB"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Why did you choose the specific statistical test?"
-      ],
-      "metadata": {
-        "id": "fF3858GYyt-u"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "HO4K0gP5y3B4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Hypothetical Statement - 2"
-      ],
-      "metadata": {
-        "id": "4_0_7-oCpUZd"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. State Your research hypothesis as a null hypothesis and alternate hypothesis."
-      ],
-      "metadata": {
-        "id": "hwyV_J3ipUZe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "FnpLGJ-4pUZe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 2. Perform an appropriate statistical test."
-      ],
-      "metadata": {
-        "id": "3yB-zSqbpUZe"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Perform Statistical Test to obtain P-Value"
-      ],
-      "metadata": {
-        "id": "sWxdNTXNpUZe"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which statistical test have you done to obtain P-Value?"
-      ],
-      "metadata": {
-        "id": "dEUvejAfpUZe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "oLDrPz7HpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Why did you choose the specific statistical test?"
-      ],
-      "metadata": {
-        "id": "Fd15vwWVpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "4xOGYyiBpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Hypothetical Statement - 3"
-      ],
-      "metadata": {
-        "id": "bn_IUdTipZyH"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. State Your research hypothesis as a null hypothesis and alternate hypothesis."
-      ],
-      "metadata": {
-        "id": "49K5P_iCpZyH"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "7gWI5rT9pZyH"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 2. Perform an appropriate statistical test."
-      ],
-      "metadata": {
-        "id": "Nff-vKELpZyI"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Perform Statistical Test to obtain P-Value"
-      ],
-      "metadata": {
-        "id": "s6AnJQjtpZyI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which statistical test have you done to obtain P-Value?"
-      ],
-      "metadata": {
-        "id": "kLW572S8pZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "ytWJ8v15pZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Why did you choose the specific statistical test?"
-      ],
-      "metadata": {
-        "id": "dWbDXHzopZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "M99G98V6pZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## ***6. Feature Engineering & Data Pre-processing***"
       ],
       "metadata": {
@@ -2510,7 +2262,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. Handling Outliers"
+        "### 3. Handling Outliers"
       ],
       "metadata": {
         "id": "id1riN9m0vUs"
@@ -2566,7 +2318,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3. Categorical Encoding"
+        "### 4. Categorical Encoding"
       ],
       "metadata": {
         "id": "89xtkJwZ18nB"
@@ -2685,7 +2437,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 8. Data Splitting"
+        "### 5. Data Splitting"
       ],
       "metadata": {
         "id": "BhH2vgX9EjGr"
@@ -2694,10 +2446,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Split your data to train and test. Choose Splitting ratio wisely.\n"
+        "# Split your data to train and test. Choose Splitting ratio wisely.\n",
+        "#train and test split\n",
+        "x_train, x_test, y_train, y_test = train_test_split( x,y , test_size = 0.2, random_state = 42)"
       ],
       "metadata": {
         "id": "0CTyd2UwEyNM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#shape of y_train and y_test data\n",
+        "print(y_train.shape)\n",
+        "print(y_test.shape)"
+      ],
+      "metadata": {
+        "id": "zdlFU5kzt7MK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#shape of x_train and x_test data\n",
+        "print(x_train.shape)\n",
+        "print(x_test.shape)"
+      ],
+      "metadata": {
+        "id": "VBV_keNAt7Ir"
       },
       "execution_count": null,
       "outputs": []
@@ -2714,7 +2494,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "The foregoing data splitting methods can be implemented once we specify a splitting ratio. A commonly used ratio is 80:20, which means 80% of the data is for training and 20% for testing which I did in here. Other ratios such as 70:30, 60:40, and even 50:50 are also used in practice. There does not seem to be clear guidance on what ratio is best or optimal for a given dataset. The 80:20 split draws its justification from the well-known Pareto principle, but that is again just a thumb rule used by practitioners."
       ],
       "metadata": {
         "id": "Y2lJ8cobFDb_"
@@ -2732,7 +2512,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ML Model - 1"
+        "### ML Model - 1 Fitting Logistic Regression"
       ],
       "metadata": {
         "id": "OB4l2ZhMeS1U"
@@ -2745,10 +2525,46 @@
         "\n",
         "# Fit the Algorithm\n",
         "\n",
-        "# Predict on the model"
+        "# Predict on the model\n",
+        "#logistic regression fitting \n",
+        "log_reg = LogisticRegression(fit_intercept=True, max_iter=10000)\n",
+        "log_reg.fit(x_train, y_train)\n"
       ],
       "metadata": {
         "id": "7ebyywQieS1U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_reg.coef_"
+      ],
+      "metadata": {
+        "id": "Bh5pI_mcJtp3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_reg.intercept_"
+      ],
+      "metadata": {
+        "id": "-BzTXFFmJttA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_reg.score(x_test,y_test)"
+      ],
+      "metadata": {
+        "id": "YoIh_M1QJ1O5"
       },
       "execution_count": null,
       "outputs": []
@@ -2765,10 +2581,38 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing evaluation Metric Score chart"
+        "# Visualizing evaluation Metric Score chart\n",
+        "y_pred = log_reg.predict(x_test)"
       ],
       "metadata": {
-        "id": "rqD5ZohzfxKe"
+        "id": "wW9oV1CyLFnz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#report of logistic regression \n",
+        "report_lR = classification_report(y_test, y_pred)\n",
+        "print(report_lR)"
+      ],
+      "metadata": {
+        "id": "3KhrU88qLFuU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#cofusion matrix of logistic regression \n",
+        "confuse_matrix_lr = confusion_matrix( y_test,y_pred)\n",
+        "#plooting confusion matrix\n",
+        "sns.heatmap(confuse_matrix_lr, annot=True, fmt = \".1f\")"
+      ],
+      "metadata": {
+        "id": "U6of_fsoLGBD"
       },
       "execution_count": null,
       "outputs": []
@@ -2789,10 +2633,46 @@
         "\n",
         "# Fit the Algorithm\n",
         "\n",
-        "# Predict on the model"
+        "# Predict on the model\n",
+        "logistic = LogisticRegression()"
       ],
       "metadata": {
         "id": "Dy61ujd6fxKe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score"
+      ],
+      "metadata": {
+        "id": "RSfm3NdbKPxr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = cross_val_score(log_reg, x_train, y_train, cv=20)\n",
+        "print('Cross-Validation Accuracy Scores', scores)"
+      ],
+      "metadata": {
+        "id": "RAzbII3YKPz9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = pd.Series(scores)\n",
+        "scores.min(), scores.mean(), scores.max()"
+      ],
+      "metadata": {
+        "id": "yss-asjcKP5R"
       },
       "execution_count": null,
       "outputs": []
@@ -2836,7 +2716,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ML Model - 2"
+        "### ML Model - 2 Fitting Decision Tree Classifer"
       ],
       "metadata": {
         "id": "dJ2tPlVmpsJ0"
@@ -2943,7 +2823,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ML Model - 3"
+        "### ML Model - 3 Fitting Random Forest"
       ],
       "metadata": {
         "id": "Fze-IPXLpx6K"
