--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -24,17 +24,13 @@
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
         "KSlN3yHqYklG",
-        "Seke61FWphqN",
-        "rFu4xreNphqO",
         "yLjJCtPM0KBk",
         "xiyOF9F70UgQ",
         "-oLEiFgy-5Pf",
         "id1riN9m0vUs",
         "89xtkJwZ18nB",
         "BhH2vgX9EjGr",
-        "TfvqoZmBfxKf",
         "dJ2tPlVmpsJ0",
-        "JWYfwnehpsJ1",
         "-jK_YjpMpsJ2",
         "HAih1iBOpsJ2",
         "zVGeBEFhpsJ2",
@@ -1448,7 +1444,7 @@
       "source": [
         "# Chart - 5 visualization code\n",
         "plt.figure(figsize=(10,5))\n",
-        "sns.lineplot(x=airline_df['cabin'],y=airline_df['cabin_service'],hue= airline_df['recommended'], palette= ['blue','red'])\n",
+        "sns.boxplot(x=airline_df['cabin'],y=airline_df['cabin_service'],hue= airline_df['recommended'], palette= ['blue','red'])\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1511,7 +1507,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "* from the insight we come to conclution that we should focus on cabin service improvement because it has direct relation with recommendation.\n",
+        "\n",
+        "* Improve First class traveler service for more recommendation."
+      ],
       "metadata": {
         "id": "_WtzZ_hCYuh4"
       }
@@ -1615,7 +1615,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "* When travelers give more than 8 rating they recommended the others so from this insight we can say that we need to improve overall experience of the traveler for more recommendation."
       ],
       "metadata": {
         "id": "DW4_bGpfphqN"
@@ -1725,25 +1725,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 3. Will the gained insights help creating a positive business impact? \n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "b0JNsNcRphqO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "xvSq8iUTphqO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#### Chart - 8 Which cabin type has more recomended based on overall service ratings by customers?"
       ],
       "metadata": {
@@ -1829,7 +1810,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "* When traveler give more than 4 rating in seat comfort section they mostly recommended the others so that from this insight we can say that we need to improve seat comfort of the traveler for more recommendation.\n",
+        "\n",
+        "* In Business, First and Premium class is positively relate with traveller recommendation. When they give more than 4 rating chances of recommendation goes high.This is the sign of positive growth in business"
       ],
       "metadata": {
         "id": "ey_0qi68phqO"
@@ -1915,25 +1898,6 @@
       ],
       "metadata": {
         "id": "ngGi97qjphqQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact? \n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "lssrdh5qphqQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "tBpY5ekJphqQ"
       }
     },
     {
@@ -2561,6 +2525,17 @@
     {
       "cell_type": "code",
       "source": [
+        "log_reg.score(x_train,y_train)"
+      ],
+      "metadata": {
+        "id": "UcHTg-2Sh_qZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "log_reg.score(x_test,y_test)"
       ],
       "metadata": {
@@ -2581,11 +2556,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing evaluation Metric Score chart\n",
-        "y_pred = log_reg.predict(x_test)"
+        "# Get the predicted probabilities\n",
+        "train_preds = log_reg.predict_proba(x_train)\n",
+        "test_preds = log_reg.predict_proba(x_test)"
       ],
       "metadata": {
-        "id": "wW9oV1CyLFnz"
+        "id": "HhXj2JGGmIlU"
       },
       "execution_count": null,
       "outputs": []
@@ -2593,12 +2569,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#report of logistic regression \n",
-        "report_lR = classification_report(y_test, y_pred)\n",
-        "print(report_lR)"
+        "test_preds"
       ],
       "metadata": {
-        "id": "3KhrU88qLFuU"
+        "id": "F3LRm7AqmIxm"
       },
       "execution_count": null,
       "outputs": []
@@ -2606,13 +2580,104 @@
     {
       "cell_type": "code",
       "source": [
-        "#cofusion matrix of logistic regression \n",
-        "confuse_matrix_lr = confusion_matrix( y_test,y_pred)\n",
-        "#plooting confusion matrix\n",
-        "sns.heatmap(confuse_matrix_lr, annot=True, fmt = \".1f\")"
+        "train_preds = log_reg.predict_proba(x_train)[:,1]\n",
+        "test_preds =log_reg.predict_proba(x_test)[:,1]"
       ],
       "metadata": {
-        "id": "U6of_fsoLGBD"
+        "id": "PC6E_IMdmIzz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_preds"
+      ],
+      "metadata": {
+        "id": "-HJIdgSHmI2r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the predicted classes\n",
+        "train_class_preds = log_reg.predict(x_train)\n",
+        "test_class_preds = log_reg.predict(x_test)"
+      ],
+      "metadata": {
+        "id": "nVhTtIywmI6i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_class_preds"
+      ],
+      "metadata": {
+        "id": "PCRGi4IDmYPg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the accuracy scores\n",
+        "train_accuracy = accuracy_score(train_class_preds,y_train)\n",
+        "test_accuracy = accuracy_score(test_class_preds,y_test)\n",
+        "\n",
+        "print(\"The accuracy on train data is \", train_accuracy)\n",
+        "print(\"The accuracy on test data is \", test_accuracy)"
+      ],
+      "metadata": {
+        "id": "RAzbII3YKPz9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the confusion matrix for both train and test\n",
+        "cm = confusion_matrix(y_train, train_class_preds)\n",
+        "print(cm)\n",
+        "\n",
+        "ax= plt.subplot()\n",
+        "sns.heatmap(cm, annot=True, ax = ax) #annot=True to annotate cells\n",
+        "\n",
+        "# labels, title and ticks\n",
+        "ax.set_xlabel('Predicted labels')\n",
+        "ax.set_ylabel('True labels')\n",
+        "ax.set_title('Confusion Matrix')"
+      ],
+      "metadata": {
+        "id": "yss-asjcKP5R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the confusion matrix for both train and test\n",
+        "cm = confusion_matrix(y_test, test_class_preds)\n",
+        "print(cm)\n",
+        "\n",
+        "ax= plt.subplot()\n",
+        "sns.heatmap(cm, annot=True, ax = ax); #annot=True to annotate cells\n",
+        "\n",
+        "# labels, title and ticks\n",
+        "ax.set_xlabel('Predicted labels')\n",
+        "ax.set_ylabel('True labels')\n",
+        "ax.set_title('Confusion Matrix')"
+      ],
+      "metadata": {
+        "id": "qSsDasMammHY"
       },
       "execution_count": null,
       "outputs": []
@@ -2645,7 +2710,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.model_selection import cross_val_score"
+        "#import libery\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import cross_validate"
       ],
       "metadata": {
         "id": "RSfm3NdbKPxr"
@@ -2656,11 +2723,11 @@
     {
       "cell_type": "code",
       "source": [
-        "scores = cross_val_score(log_reg, x_train, y_train, cv=20)\n",
-        "print('Cross-Validation Accuracy Scores', scores)"
+        "scoring = ['accuracy']\n",
+        "scores = cross_validate(logistic,x_train, y_train, scoring = scoring, cv =10, return_train_score=True,return_estimator=True,verbose = 10)"
       ],
       "metadata": {
-        "id": "RAzbII3YKPz9"
+        "id": "gsm-KupHmmK1"
       },
       "execution_count": null,
       "outputs": []
@@ -2668,11 +2735,44 @@
     {
       "cell_type": "code",
       "source": [
-        "scores = pd.Series(scores)\n",
-        "scores.min(), scores.mean(), scores.max()"
+        "scores['train_accuracy']"
       ],
       "metadata": {
-        "id": "yss-asjcKP5R"
+        "id": "2B_jcibwmYSD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores['test_accuracy']"
+      ],
+      "metadata": {
+        "id": "VPwpeIQamYX6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores['estimator']"
+      ],
+      "metadata": {
+        "id": "jaLDhhdtm_No"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for model in scores['estimator']:\n",
+        "    print(model.coef_)"
+      ],
+      "metadata": {
+        "id": "ZUyDvaMunCtw"
       },
       "execution_count": null,
       "outputs": []
@@ -2707,7 +2807,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Accuracy : Accuracy will require two inputs (i) actual class labels (ii)predicted class labels. To get the class labels from probabilities( these probabilities will be probabilities of getting a HIT), you can take a threshold of 0.5. Any probability above 0.5 will be labeled as class 1 and anything less than 0.5 will be labeled as class 0.\n",
+        "\n",
+        "\n",
+        "Precision : Precision for a label is defined as the number of true positives divided by the number of predicted positives. Report precision in percentages.\n",
+        "\n",
+        "\n",
+        "Recall : Recall for a label is defined as the number of true positives divided by the total number of actual positives. Report recall in percentages.\n",
+        "\n",
+        "\n",
+        "F1-Score : This is defined as the harmonic mean of precision and recall.\n"
       ],
       "metadata": {
         "id": "OaLui8CcfxKf"
@@ -2734,7 +2843,53 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing evaluation Metric Score chart"
+        "#Initializing Decision Tree Model object\n",
+        "decision_classify=DecisionTreeClassifier()"
+      ],
+      "metadata": {
+        "id": "IQljR7J8jshc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Taining a model with x and y\n",
+        "decision_classify.fit(x_train,y_train)"
+      ],
+      "metadata": {
+        "id": "8fxVcSg1j0-P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "decision_classify.score(x_train,y_train)"
+      ],
+      "metadata": {
+        "id": "YGHirg8okDRZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "decision_classify.score(x_test,y_test)"
+      ],
+      "metadata": {
+        "id": "ic5dfb8dkDVB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Visualizing evaluation Metric Score chart\n"
       ],
       "metadata": {
         "id": "yEl-hgQWpsJ1"
