--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -32,11 +32,14 @@
         "id1riN9m0vUs",
         "89xtkJwZ18nB",
         "BhH2vgX9EjGr",
+        "OB4l2ZhMeS1U",
+        "dJ2tPlVmpsJ0",
+        "JWYfwnehpsJ1",
+        "Fze-IPXLpx6K",
         "7AN1z2sKpx6M",
         "9PIHJqyupx6M",
-        "_-qAgymDpx6N",
-        "h_CCil-SKHpo",
         "cBFFvTBNJzUa",
+        "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
       "include_colab_link": true
@@ -3209,6 +3212,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#calling an best score\n",
+        "random_forest_gridcv.best_score_"
+      ],
+      "metadata": {
+        "id": "Fcn4lNRPqOcv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "##### Which hyperparameter optimization technique have you used and why?"
@@ -3220,7 +3235,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Here we used GridSearchCv for improve the accuracy"
       ],
       "metadata": {
         "id": "lQMffxkwpx6N"
@@ -3229,7 +3244,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### Have you seen any improvement? Note down the improvement with updates Evaluation metric Score Chart."
+        "##### Have you seen any improvement?"
       ],
       "metadata": {
         "id": "Z-hykwinpx6N"
@@ -3238,7 +3253,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "After Hypermeter tuning we did not find any improvement in the score"
       ],
       "metadata": {
         "id": "MzVzZC6opx6N"
@@ -3380,7 +3395,7 @@
     {
       "cell_type": "code",
       "source": [
-        "knn_cv.best_score_"
+        "#knn_cv.best_score_"
       ],
       "metadata": {
         "id": "OwYafVSwjZUC"
@@ -3468,11 +3483,17 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "#confusion matrix\n",
+        "naive_bayes_con_mat = confusion_matrix( y_test,y_pred)\n",
+        "naive_bayes_con_mat"
+      ],
       "metadata": {
-        "id": "iAA-PcbImMzm"
-      }
+        "id": "HvUpLg_M0m2x"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3520,6 +3541,17 @@
     {
       "cell_type": "code",
       "source": [
+        "y_pred"
+      ],
+      "metadata": {
+        "id": "FZp1Wk680rxv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#confusion matrix\n",
         "support_vector_con_mat = confusion_matrix( y_test,y_pred)\n",
         "support_vector_con_mat"
@@ -3549,9 +3581,91 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Creating a function to return all Models Accuracy Score \n",
+        "\n",
+        "def accuracy_of_each_model(model,X_train,X_test):\n",
+        "\n",
+        "  #predicting a train datas\n",
+        "  y_train_preds=model.predict(X_train)\n",
+        "\n",
+        "  #predicting a test datas\n",
+        "  y_test_preds=model.predict(X_test)\n",
+        "\n",
+        "  #storing all training scores\n",
+        "  train_scores=[]\n",
+        "\n",
+        "  #storing all test scores\n",
+        "  test_scores=[]\n",
+        "  metrics=['Accuracy_Score','Precsion_Score','Recall_Score','Roc_Auc_Score']\n",
+        "\n",
+        "  # Get the accuracy scores\n",
+        "  train_accuracy_score = accuracy_score(y_train,y_train_preds)\n",
+        "  test_accuracy_score = accuracy_score(y_test,y_test_preds)\n",
+        "  \n",
+        "  train_scores.append(train_accuracy_score)\n",
+        "  test_scores.append(test_accuracy_score)\n",
+        "\n",
+        "  # Get the precision scores\n",
+        "  train_precision_score = precision_score(y_train,y_train_preds)\n",
+        "  test_precision_score = precision_score(y_test,y_test_preds)\n",
+        "  train_scores.append(train_precision_score)\n",
+        "  test_scores.append(test_precision_score)\n",
+        "\n",
+        "  # Get the recall scores\n",
+        "  train_recall_score =recall_score(y_train,y_train_preds)\n",
+        "  test_recall_score =recall_score(y_test,y_test_preds)\n",
+        "\n",
+        "  train_scores.append(train_recall_score)\n",
+        "  test_scores.append(test_recall_score)\n",
+        "\n",
+        "  # Get the roc_auc scores\n",
+        "  train_roc_auc_score=roc_auc_score(y_train,y_train_preds)\n",
+        "  test_roc_auc_score =roc_auc_score(y_test,y_test_preds)\n",
+        "\n",
+        "  train_scores.append(train_roc_auc_score)\n",
+        "  test_scores.append(test_roc_auc_score)\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "cwPQGok1rmf_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "models=[log_reg,tree_cv,random_forest,k_neighbor,support_vector,naive_bayes]\n",
+        "name=['Logistic Regression Model','Decision Tree Model After Hyperparameter Tuning','Random Forest Model After Hyperparameter Tuning','k_neighbor','support vector','naive bayes']"
+      ],
+      "metadata": {
+        "id": "EqaCeGScryRy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for model_ in range(len(models)):\n",
+        "  train_score_,test_score_,metrics_=accuracy_of_each_model(models[model_],x_train,x_test)\n",
+        "  print(\"-*-*-\"*3+f\"{name[model_]}\"+\"-*-*-\"*4)\n",
+        "  print(\"\")\n",
+        "  print(pd.DataFrame(data={'Metrics':metrics_,'Train_Score':train_score_,'Test_Score':test_score_}))\n",
+        "  print(\"\")"
+      ],
+      "metadata": {
+        "id": "5UgrLTKtryVF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "From the above dataframe we can chose  model for final prediction model because this model is perform better compare to other model.Random forest regression was also perform good in this mode"
       ],
       "metadata": {
         "id": "jHVz9hHDKFms"
